[tool.poetry]
name = "lw1"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.1"
toml = "^0.10.2"
watchfiles = "^0.22.0"
python-slugify = "^8.0.0"
PyYAML = "^6.0"
Markdown = "^3.3.6"
Pygments = "^2.11.2"
markdown-katex = "^202406.1035"
Babel = "^2.10.1"
redis = "^5.0.1"
hiredis = "^2.0.0"
lxml-stubs = "^0.5.1"
thumbhash-python = {git = "https://github.com/Findus23/thumbhash-python.git"}
pillow = "^10.0.0"

[tool.poetry.scripts]
lw1 = 'lw1.main:main'


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
